# dolphin-id

./: .gitignore  .prettierignore  README.md  development-plan-and-collaboration-workflow.md  eslint.config.js  multi-chain-web3-login-plugin-product-doc.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  多链Web3用户登录插件产品文档.md  开发计划与协作流程.md
.changeset/: bitcoin-aptos-adapters.md  cli-app-scaffolder.md  config.json  hosted-nonce-session-service.md  multi-wallet-identity.md  refresh-token-logout-controls.md  security-audit-remediation.md  solana-siws-login.md  walletconnect-mobile-deeplinks.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
apps/docs/: package.json  (+1 more)
docs/: README.md  adapter-spec.md  adapter-test-fixtures.md  api-reference.md  cli.md  contributing.md  getting-started.md  integration-manual.md  product-overview.md  roadmap.md  security-audit.md  security.md  server-sdks.md  troubleshooting.md
frontend/: app.js  dashboard-chains.html  dashboard-overview.html  dashboard-projects.html  dashboard-setup.html  debug.html  docs-api-reference.html  docs-getting-started.html  dolphin-id-developer-journey.html  embedded-login.html  index.html  landing.html  playground.html  styles.css
scripts/: create-github-issues.sh  setup-github-tracker.sh
sdks/: README.md
sdks/python/: pyproject.toml
sdks/python/src/dolphin_id_server/: __init__.py
sdks/python/tests/: test_fixtures.py
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
sdks/rust/tests/: fixtures.rs
(+96 files in other folders)
