[package]
name = "dolphin-id-server"
version = "1.0.0"
edition = "2021"
description = "Rust server verification helpers for Dolphin ID."

[dependencies]
base64 = "0.22"
blake2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"

[dev-dependencies]
serde_json = "1"
